[taotao-cloud-project-1631] update[ admin to monitor]